--- a/css/index.css
+++ b/css/index.css
@@ -1,49 +1,56 @@
 body {
-    background-color: rgba(0, 10, 2, 0.7) !important;
+  background-color: rgba(0, 10, 2, 0.7) !important;
 }
 
 .mainHeader {
-    font-weight: bold;
-    padding-top: 2rem;
+  font-weight: bold;
+  padding-top: 2rem;
 }
 
-h1, h2, h3, p, #footer {
-    text-align: center;
-    -webkit-text-fill-color: greenyellow;
-    font-family: Arial, Helvetica, sans-serif;
+h1,
+h2,
+h3,
+p,
+#footer {
+  text-align: center;
+  -webkit-text-fill-color: greenyellow;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-textarea {
-    font-family: Arial, Helvetica, sans-serif;
-    border-width: 0.2rem;
-    border-color: greenyellow;
+#textarea {
+  font-family: Arial, Helvetica, sans-serif;
+  border-width: 0.2rem;
+  border-color: greenyellow;
 }
 
 .center {
-    margin: auto;
-    padding: 10px;
-    text-align: center;
+  margin: auto;
+  text-align: center;
+  padding-left: 10%;
+  padding-right: 10%;
 }
 
 .action {
-    text-align: center;
+  text-align: center;
 }
 
 .btn {
-    min-width: 8rem;
+  min-width: 8rem;
 }
 
 .tooltip-inner {
-    min-width: 15rem;
+  min-width: 15rem;
 }
 
 #footer {
-    padding-top: 18rem;
+  padding-top: 10rem;
 }
 
-@media all and (min-width: 800px) {
-    .tab-content .container {
-        width: 70%;
-        height: 70%;
-    }
+@media (max-width: 800px) {
+  .center {
+    margin: auto;
+    text-align: center;
+    padding-left: 5%;
+    padding-right: 5%;
+  }
 }
