--- a/css/index.css
+++ b/css/index.css
@@ -30,10 +30,6 @@ p,
   padding-right: 10%;
 }
 
-.action {
-  text-align: center;
-}
-
 .btn {
   min-width: 8rem;
 }
@@ -46,11 +42,17 @@ p,
   padding-top: 10rem;
 }
 
-@media (max-width: 800px) {
+@media all and (max-width: 800px) {
   .center {
     margin: auto;
     text-align: center;
     padding-left: 5%;
     padding-right: 5%;
+  }
+}
+
+@media all and (min-height: 800px) {
+  #footer {
+    padding-top: 25rem;
   }
 }
