--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,9 @@
 body {
   transition: all 0.5s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: stretch;
 }
 body.dark {
   background-color: rgba(0, 10, 2, 0.7) !important;
@@ -9,6 +13,22 @@ body.dark {
 .mainHeader {
   font-weight: bold;
   padding-top: 2rem;
+}
+
+a {
+  color: black;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a.dark {
+  color: greenyellow;
+}
+
+a.dark:hover {
+  color: yellow;
 }
 
 h1,
@@ -23,7 +43,12 @@ p,
   -webkit-text-fill-color: greenyellow;
 }
 
+#footer-text:hover {
+  animation: magnify 0.5s forwards;
+}
+
 #textarea {
+  margin: auto;
   font-family: Arial, Helvetica, sans-serif;
   border-width: 0.2rem;
 }
@@ -32,10 +57,8 @@ p,
 }
 
 .center {
-  margin: auto;
-  text-align: center;
-  padding-left: 10%;
-  padding-right: 10%;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 .btn {
@@ -53,20 +76,40 @@ p,
   padding-top: 4rem;
 }
 
+#theme-toggle {
+  margin: 1rem;
+  margin-left: auto;
+}
+
+img:hover {
+  transform: rotate(360deg);
+  transition: 0.5s;
+}
+
+@keyframes magnify {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.25);
+  }
+}
+
 @media all and (max-width: 800px) {
-  .center {
-    margin: auto;
-    text-align: center;
-    padding-left: 5%;
-    padding-right: 5%;
+  .mainHeader {
+    padding-top: 0.5rem;
+  }
+  #theme-toggle {
+    margin-bottom: 0;
+    margin-left: auto;
   }
   .btn {
-    min-width: 4rem;
+    min-width: 5rem;
   }
 }
 
 @media all and (min-height: 800px) {
   #footer {
-    padding-top: 22rem;
+    padding-top: 20rem;
   }
 }
