Added clear and copy to clipboard functionalities

--- a/css/index.css
+++ b/css/index.css
@@ -81,6 +81,10 @@ p,
   margin-left: auto;
 }
 
+#clipboard-success {
+  display:none;
+}
+
 img:hover {
   transform: rotate(360deg);
   transition: 0.5s;
